
	2024-02-18

	- Changed A=-A to A=~A+1 in TCVM, because -unsigned *probably*
	  is undefined bahavior in C.

	2024-01-24

	- Added CON.RSCROLL procedure to CONSOLE module.

	2024-01-23

	- Fixed module path in DOS86C code generator (cross compilers
	  could not find library modules).
	- Added CONSOLE module. Allows cursor addressing, raw keyboard
	  input, etc on Unix, DOS, and CP/M. See docs/t3x-libs.txt.
	- Added -c (link curses library) option to tx0 compiler driver.
	  Required on Unix systems when using the CONSOLE module.

	2023-12-23

	- Added DROP,PUSH->NULL rule to optimizer.


	----- "WRITE YOUR OWN RETRO COMPILER" PUBLISHED -----

	2023-12-02

	- Applied misc. small fixes to the manual (docs/t3x.txt).

	2023-11-28

	- Fix: T.CLOSE no longer flushes write-only files when the
	  descriptor passed to it is already closed.

	2023-11-20

	- Fixed @F and [@F] where F is a forward-declared function
	  (generated wrong address).

	2023-11-18

	- Removed MU interpreter example and docs (too big, should
	  be separate).

	2023-11-07

	- Changed stack frame allocation so that every function has
	  a stack frame, even if it has no arguments and no local
	  variables.

	  Rationale:

	  f() IF (0) DO VAR x; END

	  would crash, because a stack frame is created conditionally
	  (i.e. never in the example) and removed unconditionally.

	2023-11-02

	- Simplified forward declarations, they are now just ordinary
	  labels that will be resolved later. All the special forward
	  declaration handling is not necessary in a 2-pass compiler.
	- No longer allowing DECL in modules.

	2023-10-27

	- Updated reference manual (docs/t3x.txt).

	2023-10-12

	- Fix: CPM.SEARCHNEXT function does not need an FCB.

	2023-10-12

	- Added CPMDIR example program (list CP/M directory).

	2023-10-11

	- Changed EXPANDFN in the CPM library to use the function in
	  the core library instead of duplicating it in the CPM library.
	  This requires some support in the core lib. See T_EXPANDFN.