@@ -10,11 +10,11 @@ D28FE7766AFF4D98 0006 010A ./library/strfmt.t
 05A6EA028CE6C05B 0001 01B4 ./library/shellsrt.t
 D17E8B70C25DCFE9 0005 00BE ./library/cpm.t
 3C1E926CF21866B9 0002 013A ./library/cpnc.t
-27DB04E49DA99FE4 0002 01D9 ./library/console.c
+3B866BE5209803EC 0002 01E0 ./library/console.c
 A667EAB62EAD8CB8 0004 01C4 ./library/console.cpm
 B75ADF4698B5E15D 0005 0189 ./library/console.dos
 EDC3DB5F0B2112F3 0001 0152 ./library/console.unx
-505E123045C79C18 000F 0150 ./tcvm.c
+17655C174C330BB5 0012 002F ./tcvm.c
 38A3EA8B980ECC5F 0005 0168 ./cgtcvm.t
 BAABB74A3141926B 0045 0011 ./bin/tx-cpm.com
 1D6A0E2C94D73D2A 002A 000A ./bin/txtrn0.tc
@@ -28,8 +28,8 @@ DB2E3FC8CD6264A0 0002 009A ./0BSD
 D5B799A674063790 0004 0113 ./txemtsrc.t
 903DBD9368796E04 0001 00D9 ./TODO
 956A1F78FFAF9F7C 0040 01DF ./txtrn.t
-8019D5E9D66C586C 000C 0086 ./CHANGES
-CEA216B05F8649C0 0013 014D ./README
+5DE8D7B4D2695AC2 000C 019E ./CHANGES
+308A5C1B3AD9DF6D 0014 0055 ./README
 112C85F5ED52371C 0020 00E5 ./targets/cgcpmz80.t
 CF3BE6AC5877B8D2 0003 0084 ./targets/txcpmz80.t
 398DEB15C3A19BA7 0014 01E2 ./targets/cgdos86c.t
@@ -48,7 +48,7 @@ C9831C1EEFF8AEA3 0002 0011 ./targets/txfbd386.t
 2D72E69D79185292 0020 0138 ./targets/cgxtocpm.t
 8C9AF8DE4E97FE35 0009 0106 ./targets/fb386lib.s
 C3423E3F550F569F 0005 00DE ./targets/ux386lib.c
-1CD4B95BFF01497C 0011 0105 ./README.TOO
+F42DCC0F40CB6E34 0011 0108 ./README.TOO
 85C240798CD0D998 0003 01E5 ./txemtbin.t
 FCF16D2D5416DF30 0002 0136 ./txtcvm.t
 EB9B27512677428F 0002 013D ./programs/fib.t
@@ -77,4 +77,4 @@ C92371F9AE8ECECC 0009 013A ./docs/rationale.txt
 7453D14BA6701595 000E 00CF ./docs/t3x.bnf
 AC2A3D7743DEC470 0037 0187 ./docs/t3x-libs.txt
 D3D63EFB55149F37 0002 0123 ./docs/s86-bugs.txt
-64934609AE396B94 000B 012F ./Makefile
+C6D1973F4F83AE5E 000C 011C ./Makefile
